--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="leftSide">
         <div id="logoDiv"><img src="./img/odin-lined.png" alt="Odin Logo" id="logo" width="1rem" height="auto"><h1>ODIN</h1></div>
         <img src="./img/ferns-odin-project.jpg" alt="Giant ferns image" id="fernBG" width="800px" height="auto">
-        
+        <p id="creds">Photo by Halie West on Unsplash</p>
     </div>
     <div id="rightSide">
         <div id="advert">
