im calling it here. form validation html side added.

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 </div>
                 <div>
                     <label for="emailAddr">Email</label>
-                    <input type="email" id="emailAddr">
+                    <input type="email" id="emailAddr" pattern="[0-9A-Za-z]+@[0-9A-Za-z]+">
                 </div>
                 <div>
                     <label for="phone">Phone</label>
-                    <input type="tel" id="phone">
+                    <input type="tel" id="phone" pattern="[0-9]{10}">
                 </div>
                 <div>
                     <label for="pwdCreation">Password</label>
-                    <input type="password" id="pwdCreation">
+                    <input type="password" id="pwdCreation"  minlength="8" required>
                 </div>
                 <div>
                     <label for="pwdConfirm">Confirm Password</label>
-                    <input type="password" id="pwdConfirm">
+                    <input type="password" id="pwdConfirm" minlength="8" required>
                 </div>
             </div>
             <button>Create Account</button>
